# jepa-rs

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRODUCTION_GAP.md  README.md  ROADMAP.md  SPECIFICATION.md  WORK_PACKAGES.md  agents.md
.codex/skills/: _index.md  burn-backend.md  checkpoint-and-onnx.md  ci-verification.md  cli-and-demos.md  compat-loading.md  debugging.md  implementing-rfcs.md  strict-vision-models.md  testing-and-parity.md  testing.md  workspace-development.md
.github/workflows/: ci.yml  deploy-webgpu.yml
crates/jepa/: Cargo.toml
crates/jepa-compat/: Cargo.toml
crates/jepa-compat/examples/: model_registry.rs  onnx_inference.rs
crates/jepa-compat/src/: keymap.rs  lib.rs  onnx.rs  registry.rs  runtime.rs  safetensors.rs
crates/jepa-core/: Cargo.toml
crates/jepa-core/benches/: core_bench.rs
crates/jepa-core/proptest-regressions/: ema.txt
crates/jepa-core/src/: collapse.rs  config.rs  ema.rs  encoder.rs  energy.rs  lib.rs  masking.rs  predictor.rs  types.rs
crates/jepa-train/: Cargo.toml
crates/jepa-train/benches/: train_bench.rs
crates/jepa-train/src/: causal.rs  checkpoint.rs  lib.rs  schedule.rs  step.rs  trainer.rs
crates/jepa-vision/: Cargo.toml
crates/jepa-vision/benches/: vision_bench.rs
crates/jepa-vision/examples/: ijepa_demo.rs  ijepa_train_loop.rs
crates/jepa-vision/src/: image.rs  lib.rs  patch.rs  rope.rs  slot_attention.rs  token_ops.rs  video.rs  vit.rs
crates/jepa-vision/tests/: integration.rs
crates/jepa-web/: Cargo.toml  index.html
crates/jepa-web/assets/: style.css
crates/jepa-web/js/: app.js  canvas.js  charts.js
crates/jepa-web/src/: backend.rs  inference.rs  lib.rs  state.rs  training.rs
crates/jepa-world/: Cargo.toml
crates/jepa-world/benches/: world_bench.rs
crates/jepa-world/examples/: world_model_planning.rs
crates/jepa-world/proptest-regressions/: memory.txt
crates/jepa-world/src/: action.rs  hierarchy.rs  lib.rs  memory.rs  object_dynamics.rs  planner.rs
crates/jepa/examples/: prepare_demo_image_folder.rs  train_image_folder_demo.rs  train_synthetic_demo.rs
crates/jepa/examples/support/: mod.rs
crates/jepa/src/: cli.rs  demo.rs  fmt_utils.rs  lib.rs  main.rs
crates/jepa/src/commands/: checkpoint.rs  encode.rs  inspect.rs  mod.rs  models.rs  train.rs
crates/jepa/src/tui/: app.rs  event.rs  mod.rs  ui.rs
docs/: ARCHITECTURE.md  OPERATIONS.md  PERFORMANCE.md  PRODUCTION_GAPS.md  QUALITY_GATES.md  RELEASE.md  ROADMAP.md
docs/adr/: 0001-strict-masked-encoder.md
docs/agentic/: lessons-learned.md  project-decisions.md
docs/releases/: 0.1.0-rc-rehearsal.md
docs/specs/features/c-jepa/: README.md
docs/specs/features/webgpu-demo/: README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: checkpoint_parsing.rs  energy.rs  gather.rs  masking.rs
scripts/: export_ijepa_onnx.py  run_parity_suite.sh
specs/differential/: README.md  export_ijepa_strict_fixture.py  ijepa_strict_rect_fixture.json  ijepa_strict_rgb_patch24_fixture.json  ijepa_strict_tiny_fixture.json  render_fixture_for_rust.py
specs/gherkin/: features.feature
