[workspace]
resolver = "2"
members = [
    "crates/jepa-core",
    "crates/jepa-vision",
    "crates/jepa-world",
    "crates/jepa-train",
    "crates/jepa-compat",
    "crates/jepa",
    "crates/jepa-web",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/AbdelStark/jepa-rs"
homepage = "https://github.com/AbdelStark/jepa-rs"
readme = "README.md"
authors = ["Abdel Bakhta <abdel@starkware.co>"]
description = "JEPA primitives in Rust"
keywords = ["jepa", "world-model", "self-supervised", "machine-learning", "ai"]
categories = ["science", "algorithms"]

[workspace.dependencies]
burn = { version = "0.20.1", features = ["autodiff"] }
burn-ndarray = "0.20.1"
burn-wgpu = "0.20.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.10.0"
rand_chacha = "0.10.0"
thiserror = "2"
safetensors = "0.7.0"
half = "2"
ndarray = "0.17.2"
log = "0.4"
proptest = "1"
criterion = "0.8.2"
