[package]
name = "jepa-compat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Checkpoint and ONNX compatibility utilities for jepa-rs models"
readme = "../../README.md"
documentation = "https://docs.rs/jepa-compat"

[dependencies]
jepa-core = { path = "../jepa-core" }
burn = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
half = { workspace = true }
thiserror = { workspace = true }
prost = "0.11"
tract-onnx = "0.23.0-dev.2"

[dev-dependencies]
burn-ndarray = { workspace = true }
proptest = { workspace = true }
