[package]
name = "jepa-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core traits and abstractions for JEPA (Joint Embedding Predictive Architecture)"
readme = "../../README.md"
documentation = "https://docs.rs/jepa-core"

[dependencies]
burn = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }

[dev-dependencies]
burn-ndarray = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "core_bench"
harness = false
