[package]
name = "jepa-train"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Training loop utilities for JEPA models"

[dependencies]
jepa-core = { path = "../jepa-core" }
burn = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[dev-dependencies]
burn-ndarray = { workspace = true }
rand_chacha = { workspace = true }
serde_json = { workspace = true }
proptest = { workspace = true }
