[package]
name = "jepa-train"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Training loop utilities for JEPA models"
readme = "../../README.md"
documentation = "https://docs.rs/jepa-train"

[dependencies]
jepa-core = { path = "../jepa-core", version = "0.1.0" }
burn = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[dev-dependencies]
burn-ndarray = { workspace = true }
rand_chacha = { workspace = true }
serde_json = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "train_bench"
harness = false
