[package]
name = "jepa-vision"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vision-specific JEPA implementations (ViT encoder, patch embedding, I-JEPA)"

[dependencies]
jepa-core = { path = "../jepa-core" }
burn = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
burn-ndarray = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
jepa-train = { path = "../jepa-train" }

[[example]]
name = "ijepa_demo"
required-features = []

[[example]]
name = "ijepa_train_loop"
required-features = []
