[package]
name = "jepa-vision"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Vision-specific JEPA implementations (ViT encoder, patch embedding, I-JEPA)"
readme = "../../README.md"
documentation = "https://docs.rs/jepa-vision"

[dependencies]
jepa-core = { path = "../jepa-core", version = "0.1.0" }
burn = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
burn-ndarray = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
jepa-train = { path = "../jepa-train", version = "0.1.0" }

[[bench]]
name = "vision_bench"
harness = false

[[example]]
name = "ijepa_demo"
required-features = []

[[example]]
name = "ijepa_train_loop"
required-features = []
