[package]
name = "jepa-world"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Action-conditioned world model and hierarchical JEPA (H-JEPA)"

[dependencies]
jepa-core = { path = "../jepa-core" }
burn = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
burn-ndarray = { workspace = true }
proptest = { workspace = true }
rand_chacha = { workspace = true }
rand = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "world_bench"
harness = false

[[example]]
name = "world_model_planning"
required-features = []
