[package]
name = "jepa-world"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Action-conditioned world model and hierarchical JEPA (H-JEPA)"
readme = "../../README.md"
documentation = "https://docs.rs/jepa-world"

[dependencies]
jepa-core = { path = "../jepa-core", version = "0.1.0" }
burn = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
burn-ndarray = { workspace = true }
proptest = { workspace = true }
rand_chacha = { workspace = true }
rand = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "world_bench"
harness = false

[[example]]
name = "world_model_planning"
required-features = []
