[package]
name = "jepa"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "CLI and TUI for the jepa-rs workspace"
keywords = ["jepa", "cli", "tui", "machine-learning"]
categories = ["command-line-utilities"]

[[bin]]
name = "jepa"
path = "src/main.rs"

[dependencies]
# Workspace crates
jepa-core = { path = "../jepa-core" }
jepa-vision = { path = "../jepa-vision" }
jepa-world = { path = "../jepa-world" }
jepa-train = { path = "../jepa-train" }
jepa-compat = { path = "../jepa-compat" }

# Workspace deps
burn = { workspace = true }
burn-ndarray = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# CLI
clap = { version = "4", features = ["derive", "color", "env"] }

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Utilities
anyhow = "1"
chrono = "0.4"
rand = { workspace = true }
