[package]
name = "jepa"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "CLI and TUI for the jepa-rs workspace"
readme = "../../README.md"
documentation = "https://docs.rs/jepa"
keywords = ["jepa", "cli", "tui", "machine-learning"]
categories = ["command-line-utilities"]

[[bin]]
name = "jepa"
path = "src/main.rs"

[dependencies]
# Workspace crates
jepa-core = { path = "../jepa-core", version = "0.1.0" }
jepa-vision = { path = "../jepa-vision", version = "0.1.0" }
jepa-world = { path = "../jepa-world", version = "0.1.0" }
jepa-train = { path = "../jepa-train", version = "0.1.0" }
jepa-compat = { path = "../jepa-compat", version = "0.1.0" }

# Workspace deps
burn = { workspace = true }
burn-ndarray = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# CLI
clap = { version = "4", features = ["derive", "color", "env"] }

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Utilities
anyhow = "1"
chrono = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
rand = { workspace = true }
